--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -20,4 +20,15 @@
 		<servlet-name>SpringSample</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
+	<filter>
+	<display-name>MyFilter</display-name>
+	<filter-name>MyFilter</filter-name>
+	<filter-class>org.studyeasy.spring.filter.MyFilter</filter-class>
+	</filter>
+	
+	<filter-mapping>
+	<filter-name>MyFilter</filter-name>
+	<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
