--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -12,7 +12,7 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/SpringSample-servlet.xml</param-value>
+			<param-value>classpath:org/studyeasy/spring/config/SpringConfig.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
@@ -21,14 +21,17 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	
-	<filter>
-	<display-name>MyFilter</display-name>
-	<filter-name>MyFilter</filter-name>
-	<filter-class>org.studyeasy.spring.filter.MyFilter</filter-class>
-	</filter>
-	
-	<filter-mapping>
-	<filter-name>MyFilter</filter-name>
-	<url-pattern>/*</url-pattern>
-	</filter-mapping>
+ <filter>
+    <display-name>springSecurityFilterChain</display-name>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
+  <session-config>
+  <session-timeout>1</session-timeout>
+  </session-config>
 </web-app>
